<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PS5</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Initial_Investment">Initial Investment</string>
    <string name="Years">Years</string>
    <string name="Annual_Interest_Rate">Annual Interest Rate</string>
    <string name="Future_Value">Future Value</string>
    <string name="Button">Button</string>
    <string name="Years_Value">Years Value</string>

</resources>
